--- a/force-app/main/default/classes/SOQLTrailhead.cls
+++ b/force-app/main/default/classes/SOQLTrailhead.cls
@@ -52,5 +52,52 @@ public with sharing class SOQLTrailhead {
                             // only three records should have been returned, the 
                             // loop should have executed only once
 
+        //SOSL
+        // Add account and related contact
+        Account acct = new Account(
+            Name='SFDC Computing',
+            Phone='(415)555-1212',
+            NumberOfEmployees=50,
+            BillingCity='San Francisco');
+        insert acct;
+        // Once the account is inserted, the sObject will be 
+        // populated with an ID.
+        // Get this ID.
+        ID acctID = acct.ID;
+        // Add a contact to this account.
+        Contact con = new Contact(
+            FirstName='John',
+            LastName='Smith',
+            Phone='(415)555-1212',
+            Department='Wingo',
+            AccountId=acctID);
+        insert con;
+        // Add account with no contact
+        Lead lead = new Lead(
+                FirstName='John',
+                LastName='Smith',
+                Company='LG');
+    
+        insert lead;
+
+        //FIND {Wingo} IN ALL FIELDS RETURNING Account(Name), Contact(FirstName,LastName,Department)
+        // This is the syntax of a basic SOSL query:
+        // FIND 'SearchQuery' [IN SearchGroup] [RETURNING ObjectsAndFields]
+        
+        String soslFindClause = 'Wingo OR SFDC';
+        List<List<sObject>> searchList = [FIND :soslFindClause IN ALL FIELDS
+                            RETURNING Account(Name),Contact(FirstName,LastName,Department)];
+        Account[] searchAccounts = (Account[])searchList[0];
+        Contact[] searchContacts = (Contact[])searchList[1];
+        System.debug('Found the following accounts.');
+        for (Account a : searchAccounts) {
+            System.debug(a.Name);
+        }
+        System.debug('Found the following contacts.');
+        for (Contact c : searchContacts) {
+            System.debug(c.LastName + ', ' + c.FirstName);
+        }
+
+
     }
 }
